--- a/templates/achievement_list.html
+++ b/templates/achievement_list.html
@@ -3,11 +3,29 @@
 
 {% block content %}
 <h2>Achievements</h2>
-<ul>
-  {% for achievement in achievements %}
-  <li>
-    <strong>{{ achievement.title }}</strong> - {{ achievement.description }}
-  </li>
-  {% endfor %}
-</ul>
-{% endblock %}
+<body>
+  <div class="bg-black">
+      <div class="flex">
+          <div class="text-5xl font-bold text-center mx-auto my-8 mb-16 text-white">Achievements</div>
+      </div>
+
+      <div class="mx-auto bg-pink-500 rounded-lg w-6/12 justify-evenly bg-opacity-40">
+          <div class="text-white flex">
+              <div class=""><img class="rounded-full px-2 py-2 w-36 ml-5" src="./assets/images/download.png"></div>
+              <div class="flex-col my-auto ml-8"> 
+                  <div class="heading">
+                      <div class="text-white font-extrabold text-2xl ">IITB Rocket Team</div>
+                  </div>
+                  
+                  <div class="description">
+                      <div class="competition_name text-white font-semibold text-l">SA Cup 2024</div>
+                      <div class="achievement text-white font-semibold text-l">2nd position nationally in 10K COTS category</div>
+                  </div>
+                  
+              </div>
+          </div>
+      </div>
+  </div>
+
+</body>
+</html>
