--- a/templates/halloffame_list.html
+++ b/templates/halloffame_list.html
@@ -3,11 +3,91 @@
 
 {% block content %}
 <h2>Achievements</h2>
-<ul>
-  {% for achievement in achievements %}
-  <li>
-    <strong>{{ achievement.title }}</strong> - {{ achievement.description }}
-  </li>
-  {% endfor %}
-</ul>
-{% endblock %}
+<body class="bg-black text-white">
+  <div class="flex">
+    <div class="text-5xl font-bold text-center mx-auto my-8 mb-16 text-white">
+      Hall Of Fame
+    </div>
+  </div>
+
+  <div class="m-5 rounded-lg justify-evenly">
+    <div class="flex-col h-screen mx-auto rounded-2xl bg-[url('https://i0.wp.com/insightiitb.org/wp-content/uploads/2024/01/inter-iit-tech-meet.jpg?resize=1024%2C768&ssl=1')]">
+      <div class=" flex bg-black bg-opacity-75 h-full">  
+          <div class="flex-col w-1/2">  
+
+              <div class="flex">
+                  <img
+                      class="flex rounded-full px-2 py-2 m-5 w-40"
+                      src="https://media.licdn.com/dms/image/v2/D560BAQHv1hOBVVKTzg/company-logo_100_100/company-logo_100_100/0/1696246874319?e=1733356800&v=beta&t=OTicDJQoGlo61zL9YsMjKukBLY-UNZgM8z4PscJRDIA"
+                  />
+                  <div class="flex-col my-auto justify-between">
+                      <div class="flex text-white font-extrabold text-4xl my-3">
+                          Inter IIT 3.0, IIT Madras
+                      </div>
+                      <div class="flex competition_name text-white text-2xl font-semibold my-3">
+                          2nd Position Overall
+                      </div>
+                  </div>
+              </div>
+          <br><br><br>
+              <div class="flex w-[60%] h-[60%] ml-14 gap-4">
+                  <div class="flex-col ">
+                      <img src="./assets/images/3.png" class="flex ">
+                      <br><br>
+                      <div class="w-full text-white text-center text-7xl font-extrabold">3</div>
+                  </div>
+                  <div class="flex-col ">
+                      <img src="./assets/images/1.png" class="flex ">
+                      <br><br>
+                      <div class="w-full text-white text-center text-7xl font-extrabold">4</div>
+                  </div>
+                  <div class="flex-col">
+                      <img src="./assets/images/2.png" class="flex ">
+                      <br><br>
+                      <div class="w-full text-white text-center text-7xl font-extrabold">5</div>
+                  </div>
+                      <!--<div class="flex w-full text-white text-center text-3xl">4</div>
+                  </div>-->
+              </div>
+          </div>
+             <!--
+          <h2 class="p">High Prep</h2>
+          <div class="ml-2">
+          <ul>
+              <li class="bg-yellow-400">Aptos</li>
+          </ul>
+          </div>
+
+          <h2 class="p">Mid Prep</h2>
+          <div class="ml-2">
+          <ul>
+              <li>Aptos</li>
+          </ul>
+          </div>
+
+          <h2 class="p">Low Prep</h2>
+          <div class="ml-2">
+          <ul>
+              <li>Aptos</li>
+          </ul>
+          </div>-->
+          <div class="flex-col w-1/2">
+              <div class="text-white text-xl mt-16 w-[75%]">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae esse quidem possimus necessitatibus similique eum nemo vero harum cum recusandae dolorem, deserunt facere magnam in optio iure inventore consequatur ad?
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore recusandae minus, mollitia corrupti modi magnam in assumenda dolores sed dolore accusamus iusto quam numquam, ullam nam quaerat sit suscipit aliquam!
+              </div>
+
+              <div class="flex">
+                <div class="">
+                  
+                </div>
+              </div>
+          </div>
+
+          
+
+      </div>
+      </div>
+  </div>
+</body>
+</html>
