hall of fame+achievements

--- a/templates/achievement_list.html
+++ b/templates/achievement_list.html
@@ -3,29 +3,80 @@
 
 {% block content %}
 <h2>Achievements</h2>
-<body>
-  <div class="bg-black">
-      <div class="flex">
-          <div class="text-5xl font-bold text-center mx-auto my-8 mb-16 text-white">Achievements</div>
-      </div>
+<body class="bg-black"></body>
+    <div>
+        <div class="flex">
+            <div class="text-7xl font-bold text-center mx-auto my-8 mb-10 text-white">ACHIEVEMENTS</div>
+        </div>
+        <div class="flex">
+            <div class=" rounded-lg ml-64 mr-16 w-1/12 font-bold text-2xl text-white flex">
+                <form action="">
+                    <label for="year" class="flex bg-pink-800  rounded-lg justify-center mb-4 py-2">Year</label>
+                    <select name="year" id="years">
+                        <option value="2024" class=" bg-pink-800  rounded-lg justify-center mb-2 py-2">2024</option>
+                        <option value="2023" class=" bg-pink-800  rounded-lg justify-center mb-2 py-2">2023</option>
+                        <option value="2022" class=" bg-pink-800  rounded-lg justify-center mb-2 py-2">2022</option>
+                        <option value="2021" class=" bg-pink-800  rounded-lg justify-center mb-2 py-2">2021</option>
+                        <option value="2020" class=" bg-pink-800  rounded-lg justify-center mb-2 py-2">2020</option>
+                    </select>
+                    
+                </form>    
+            </div>
+            <div class="flex-col w-5/12">
+                <div class="flex bg-pink-900 rounded-lg h-22 m-2">
+                    <div class="text-white flex">
+                        <div><img class="rounded-full mx-2 my-1 w-[70px] ml-6" src="./assets/images/download.png"></div>
+                        <div class="flex-col ml-8 gap-2"> 
+                            <div class="heading flex">
+                                <div class="flex text-white font-extrabold text-xl ">IITB Rocket Team</div>
+                            </div>
+                            
+                            <div class="description flex-col">
+                                <div class="competition_name flex text-white font-semibold text-l">SA Cup 2024</div>
+                                <div class="achievement flex text-white font-semibold text-l">2nd position nationally in 10K COTS category</div>
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
 
-      <div class="mx-auto bg-pink-500 rounded-lg w-6/12 justify-evenly bg-opacity-40">
-          <div class="text-white flex">
-              <div class=""><img class="rounded-full px-2 py-2 w-36 ml-5" src="./assets/images/download.png"></div>
-              <div class="flex-col my-auto ml-8"> 
-                  <div class="heading">
-                      <div class="text-white font-extrabold text-2xl ">IITB Rocket Team</div>
-                  </div>
-                  
-                  <div class="description">
-                      <div class="competition_name text-white font-semibold text-l">SA Cup 2024</div>
-                      <div class="achievement text-white font-semibold text-l">2nd position nationally in 10K COTS category</div>
-                  </div>
-                  
-              </div>
-          </div>
-      </div>
-  </div>
+                <div class="flex bg-pink-900 rounded-lg h-22 m-2">
+                    <div class="text-white flex">
+                        <div><img class="rounded-full mx-2 my-1 w-[70px] ml-6" src="./assets/images/download.png"></div>
+                        <div class="flex-col ml-8 gap-2"> 
+                            <div class="heading flex">
+                                <div class="flex text-white font-extrabold text-xl ">IITB Rocket Team</div>
+                            </div>
+                            
+                            <div class="description flex-col">
+                                <div class="competition_name flex text-white font-semibold text-l">SA Cup 2024</div>
+                                <div class="achievement flex text-white font-semibold text-l">2nd position nationally in 10K COTS category</div>
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
 
+
+                <div class="flex bg-pink-900 rounded-lg h-22 m-2">
+                    <div class="text-white flex">
+                        <div><img class="rounded-full mx-2 my-1 w-[70px] ml-6" src="./assets/images/download.png"></div>
+                        <div class="flex-col ml-8 gap-2"> 
+                            <div class="heading flex">
+                                <div class="flex text-white font-extrabold text-xl ">IITB Rocket Team</div>
+                            </div>
+                            
+                            <div class="description flex-col">
+                                <div class="competition_name flex text-white font-semibold text-l">SA Cup 2024</div>
+                                <div class="achievement flex text-white font-semibold text-l">2nd position nationally in 10K COTS category</div>
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>        
+    </div>
+ 
 </body>
 </html>
