--- a/templates/_base.html
+++ b/templates/_base.html
@@ -25,69 +25,156 @@
             },
         };
     </script>
+    <style>
+        .hover-underline-animation {
+            position: relative;
+            display: inline-block;
+        }
+        .hover-underline-animation::before,
+        .hover-underline-animation::after {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 4px;
+            background-color: #3b82f6;
+            border-radius: 4px;
+            left: 0;
+            transform: scaleX(0);
+            transition: transform 0.5s ease;
+        }
+        .hover-underline-animation::before {
+            top: 0;
+            transform-origin: left;
+        }
+        .hover-underline-animation::after {
+            bottom: 0;
+            transform-origin: right;
+        }
+        .hover-underline-animation:hover::before,
+        .hover-underline-animation:hover::after {
+            transform: scaleX(0.85);
+        }
+    </style>
 </head>
 
 <body class="bg-black">
-    <nav class="text-white sticky top-0 h-10 pt-2 z-50">
+    <nav class="text-white bg-black sticky top-0 h-12 pt-2 z-50 border-b border-white">
         <div class="w-11/12 mx-auto flex justify-between items-center text-md text-thin">
-            <a href="/Home.html" class="flex items-center">
-                <img src="{% static 'img/ITClogoWhite.png' %}"
+            <a href="{% url 'home' %}" class="flex items-center">
+                <img src="https://itc.gymkhana.iitb.ac.in/static/mainwebsite/ITClogoWhite.png"
                     alt="Logo.png Load Error" class="h-8 sm:ml-4 xs:ml-6" />
             </a>
-            <div class="flex items-center space-x-6 ml-auto mb-2 xs:hidden" id="navbarNav">
-                <div class="inline-flex rounded-md shadow-sm" role="group">
+            <button class="md:block hidden text-white" id="hamburger">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16m-7 6h7" />
+                </svg>
+            </button>
+            <div class="flex items-center space-x-6 ml-auto xs:hidden" id="navbarNav">
+                <div class="inline-flex shadow-sm" role="group">
                     <a href="{% url 'home' %}" class="nav-link">
                         <button type="button"
-                            class="px-4 py-2 text-sm font-medium text-white bg-transparent border border-white rounded-s-lg transition duration-300 ease-in-out hover:bg-white hover:text-black focus:z-10 focus:ring-2 focus:ring-gray-500 focus:bg-white focus:text-black dark:border-white dark:text-white dark:hover:text-black dark:hover:bg-gray-700 dark:focus:bg-gray-700">
+                            class="px-4 py-2 text-sm font-medium text-white hover-underline-animation">
                             Home
                         </button>
                     </a>
                     <a href="{% url 'club_list' %}" class="nav-link">
                         <button type="button"
-                            class="px-4 py-2 text-sm font-medium text-white bg-transparent border-t border-r border-b border-white transition duration-300 ease-in-out hover:bg-white hover:text-black focus:z-10 focus:ring-2 focus:ring-gray-500 focus:bg-white focus:text-black dark:border-white dark:text-white dark:hover:text-black dark:hover:bg-gray-700 dark:focus:bg-gray-700">
+                            class="px-4 py-2 text-sm font-medium text-white hover-underline-animation">
                             Clubs
                         </button>
                     </a>
                     <a href="{% url 'techteam_list' %}" class="nav-link">
                         <button type="button"
-                            class="px-4 py-2 text-sm font-medium text-white bg-transparent border-t border-r border-b border-white transition duration-300 ease-in-out hover:bg-white hover:text-black focus:z-10 focus:ring-2 focus:ring-gray-500 focus:bg-white focus:text-black dark:border-white dark:text-white dark:hover:text-black dark:hover:bg-gray-700 dark:focus:bg-gray-700">
+                            class="px-4 py-2 text-sm font-medium text-white hover-underline-animation">
                             Tech Teams
                         </button>
                     </a>
                     <a href="{% url 'otherbodies_list' %}" class="nav-link">
                         <button type="button"
-                            class="px-4 py-2 text-sm font-medium text-white bg-transparent border-t border-r border-b border-white transition duration-300 ease-in-out hover:bg-white hover:text-black focus:z-10 focus:ring-2 focus:ring-gray-500 focus:bg-white focus:text-black dark:border-white dark:text-white dark:hover:text-black dark:hover:bg-gray-700 dark:focus:bg-gray-700">
+                            class="px-4 py-2 text-sm font-medium text-white hover-underline-animation">
                             Other Bodies
                         </button>
                     </a>
                     <a href="{% url 'portal_list' %}" class="nav-link">
                         <button type="button"
-                            class="px-4 py-2 text-sm font-medium text-white bg-transparent border-t border-r border-b border-white transition duration-300 ease-in-out hover:bg-white hover:text-black focus:z-10 focus:ring-2 focus:ring-gray-500 focus:bg-white focus:text-black dark:border-white dark:text-white dark:hover:text-black dark:hover:bg-gray-700 dark:focus:bg-gray-700">
+                            class="px-4 py-2 text-sm font-medium text-white hover-underline-animation">
                             Portals
                         </button>
                     </a>
                     <a href="{% url 'achievement_list' %}" class="nav-link">
                         <button type="button"
-                            class="px-4 py-2 text-sm font-medium text-white bg-transparent border-t border-r border-b border-white transition duration-300 ease-in-out hover:bg-white hover:text-black focus:z-10 focus:ring-2 focus:ring-gray-500 focus:bg-white focus:text-black dark:border-white dark:text-white dark:hover:text-black dark:hover:bg-gray-700 dark:focus:bg-gray-700">
+                            class="px-4 py-2 text-sm font-medium text-white hover-underline-animation">
                             Achievements
                         </button>
                     </a>
                     <a href="{% url 'halloffame_list' %}" class="nav-link">
                         <button type="button"
-                            class="px-4 py-2 text-sm font-medium text-white bg-transparent border-t border-b border-white transition duration-300 ease-in-out hover:bg-white hover:text-black focus:z-10 focus:ring-2 focus:ring-gray-500 focus:bg-white focus:text-black dark:border-white dark:text-white dark:hover:text-black dark:hover:bg-gray-700 dark:focus:bg-gray-700">
+                            class="px-4 py-2 text-sm font-medium text-white hover-underline-animation">
                             Hall Of Fame
                         </button>
                     </a>
                     <a href="{% url 'contact' %}" class="nav-link">
                         <button type="button"
-                            class="px-4 py-2 text-sm font-medium text-white bg-transparent border border-white rounded-e-lg transition duration-300 ease-in-out hover:bg-white hover:text-black focus:z-10 focus:ring-2 focus:ring-gray-500 focus:bg-white focus:text-black dark:border-white dark:text-white dark:hover:text-black dark:hover:bg-gray-700 dark:focus:bg-gray-700">
+                            class="px-4 py-2 text-sm font-medium text-white hover-underline-animation">
+                            Contact
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="hidden xs:inline relative bg-black w-full" id="mobileMenu">
+                <div class="flex flex-col items-center space-y-4 py-2">
+                    <a href="{% url 'home' %}" class="nav-link">
+                        <button type="button"
+                            class="px-4 py-2 text-sm font-medium text-white hover-underline-animation">
+                            Home
+                        </button>
+                    </a>
+                    <a href="{% url 'club_list' %}" class="nav-link">
+                        <button type="button"
+                            class="px-4 py-2 text-sm font-medium text-white hover-underline-animation">
+                            Clubs
+                        </button>
+                    </a>
+                    <a href="{% url 'techteam_list' %}" class="nav-link">
+                        <button type="button"
+                            class="px-4 py-2 text-sm font-medium text-white hover-underline-animation">
+                            Tech Teams
+                        </button>
+                    </a>
+                    <a href="{% url 'otherbodies_list' %}" class="nav-link">
+                        <button type="button"
+                            class="px-4 py-2 text-sm font-medium text-white hover-underline-animation">
+                            Other Bodies
+                        </button>
+                    </a>
+                    <a href="{% url 'portal_list' %}" class="nav-link">
+                        <button type="button"
+                            class="px-4 py-2 text-sm font-medium text-white hover-underline-animation">
+                            Portals
+                        </button>
+                    </a>
+                    <a href="{% url 'achievement_list' %}" class="nav-link">
+                        <button type="button"
+                            class="px-4 py-2 text-sm font-medium text-white hover-underline-animation">
+                            Achievements
+                        </button>
+                    </a>
+                    <a href="{% url 'halloffame_list' %}" class="nav-link">
+                        <button type="button"
+                            class="px-4 py-2 text-sm font-medium text-white hover-underline-animation">
+                            Hall Of Fame
+                        </button>
+                    </a>
+                    <a href="{% url 'contact' %}" class="nav-link">
+                        <button type="button"
+                            class="px-4 py-2 text-sm font-medium text-white hover-underline-animation">
                             Contact
                         </button>
                     </a>
                 </div>
             </div>
         </div>
-    </nav>
+    </nav>    
 
     <main class="text-white w-full min-h-[90vh]">
         {% block content %} {% endblock %}
@@ -127,6 +214,15 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
+    <script>
+        const hamburger = document.getElementById('hamburger');
+        const mobileMenu = document.getElementById('mobileMenu');
+
+        hamburger.addEventListener('click', () => {
+            mobileMenu.classList.toggle('hidden');
+        });
+    </script>
+    
 </body>
 
 </html>
