--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
     </p>
     <!-- bold nahi ho rhaa -->
     <h1 class="text-white font-font font-bold text-6xl pt-8 lg:text-9xl">
-      INSTITUTE <br> TECHNICAL <br> COUNCIL
+      INSTITUTE <br> TECHNICAL <br> COUNCILL
     </h1>
   </div>
 
