--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,7 +4,7 @@
 {% block title %}Contact{% endblock %}
 
 {% block content %}
-<div class="flex w-screen xl:w-[90%] h-auto flex-col m-8 lg:m-28 items-center">
+<div class="flex w-screen xl:w-[90%] h-auto flex-col mt-28 mx-auto items-center">
   <h1 class="text-white font-font text-4xl md:text-6xl mb-10">CABINET</h1>
   <div class="w-full flex flex-row flex-wrap items-start justify-center">
     {% for member in cabinet %}
