--- a/templates/body_detail.html
+++ b/templates/body_detail.html
@@ -3,8 +3,8 @@
 {% block title %}{{ body.name }}{% endblock %}
 
 {% block content %}
-<div class="w-11/12 mx-auto my-20 xs:w-full">
-  <div class="p-8 rounded-2xl bg-gradient-to-r from-gray-900 via-gray-800 to-gray-700 shadow-2xl border-2 border-gray-600 transform transition-all duration-300">
+<div class="w-11/12 mx-auto mt-20 mb-10">
+  <div class="p-8 rounded-2xl bg-gradient-to-r from-gray-900 via-gray-800 to-gray-700 shadow-2xl border-2 border-gray-600 transform transition-all duration-300 hover:scale-105">
     <div class="mb-8">
       <div class="flex items-center mb-6">
         <img
@@ -12,7 +12,7 @@
           alt="{{ body.name }} Logo"
           class="h-24 w-24 rounded-full mr-6 shadow-lg transform transition-all duration-300 hover:scale-110"
         />
-        <h1 class="text-6xl font-extrabold text-white tracking-wide">{{ body.name }}</h1>
+        <h1 class="text-2xl sm:text-4xl md:text-6xl font-extrabold text-white tracking-wide">{{ body.name }}</h1>
       </div>
       <p class="text-lg text-gray-300">{{ body.description }}</p>
     </div>
@@ -42,11 +42,16 @@
     {% if body.instagram or body.linkedin or body.github or body.website %}
     <hr class="my-8 border-t-2 border-gray-400" />
     <div>
-      <p class="text-3xl font-semibold text-gray-100 mb-4">
+      <p class="text-xl md:text-3xl font-semibold text-gray-100 mb-4">
         Contact: 
         <a href="mailto:{{ body.contact_email }}" class="underline text-blue-400 hover:text-blue-300">{{ body.contact_email }}</a>
       </p>
-      <div class="flex space-x-6 mt-4">
+      <div class="flex space-x-3 sm:space-x-6 mt-4">
+        {% if body.website %}
+        <a href="{{ body.website }}" class="transition-all duration-300 hover:bg-gray-400 text-white text-lg font-semibold p-2 px-4 rounded-xl bg-gray-700">
+          Website
+        </a>
+        {% endif %}
         {% if body.instagram %}
         <a href="{{ body.instagram }}" class="transition-transform duration-300 transform hover:scale-110">
           <img
@@ -77,11 +82,6 @@
         </a>
         {% endif %}
 
-        {% if body.website %}
-        <a href="{{ body.website }}" class="transition-all duration-300 hover:bg-gray-400 text-white text-lg font-semibold p-2 px-4 rounded-xl bg-gray-700">
-          Website
-        </a>
-        {% endif %}
       </div>
     </div>
     {% endif %}
