--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-{% extends '_base.html' %} {% block title %}Home{% endblock %} 
+{% extends '_base.html' %}
 
 {% block content%}
 <div class="flex w-full flex-col px-16 sm:px-20 md:px-24 lg:px-28 items-center">
