--- a/templates/_base.html
+++ b/templates/_base.html
@@ -7,7 +7,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block title %}ITC Official Website{% endblock %}</title>
+    <meta name='icon' href="{% static 'img/ITClogoWhite.png' %}" type='image/x-icon'>
+    <title>ITC | {% block title %}IITB Tech Council{% endblock %}</title>
 
     <link rel="stylesheet" href="{% static 'src/output.css' %}" />
     {% comment %} <link rel="stylesheet" href="{% static 'src/styles.css' %}" /> {% endcomment %}
