--- a/templates/body_detail.html
+++ b/templates/body_detail.html
@@ -1,4 +1,5 @@
 {% extends '_base.html' %}
+{% load static %}
 
 {% block title %}{{ body.name }}{% endblock %}
 
@@ -55,7 +56,7 @@
         {% if body.instagram %}
         <a href="{{ body.instagram }}" class="transition-transform duration-300 transform hover:scale-110">
           <img
-            src="3"
+            src={% static 'img/instagram.png' %}
             alt="Instagram"
             class="h-12 w-12 opacity-80 hover:opacity-100"
           />
@@ -65,7 +66,7 @@
         {% if body.linkedin %}
         <a href="{{ body.linkedin }}" class="transition-transform duration-300 transform hover:scale-110">
           <img
-            src="3"
+            src={% static 'img/linkedin.png' %}
             alt="LinkedIn"
             class="h-12 w-12 opacity-80 hover:opacity-100"
           />
@@ -75,13 +76,13 @@
         {% if body.github %}
         <a href="{{ body.github }}" class="transition-transform duration-300 transform hover:scale-110">
           <img
-            src="3"
+            src={% static 'img/github.svg' %}
             alt="GitHub"
-            class="h-12 w-12 opacity-80 hover:opacity-100"
+            class="h-10 mt-2 w-10 opacity-80 hover:opacity-100"
           />
         </a>
         {% endif %}
-
+        
       </div>
     </div>
     {% endif %}
