--- a/templates/halloffame.html
+++ b/templates/halloffame.html
@@ -24,7 +24,8 @@
 
           <div class="flex w-full mt-4 lg:mt-10 gap-4 lg:gap-6">
             <div class="flex-col items-center">
-              <img src="./assets/images/3.png" class="w-12 lg:w-20 h-12 lg:h-20" />
+              <img src={% static 'assets/images/3.png' %}
+               class="w-12 lg:w-20 h-12 lg:h-20" />
               <div class="text-white text-center text-4xl lg:text-7xl font-extrabold mt-2 lg:mt-4">{{ interiit.bronze }}</div>
             </div>
             <div class="flex-col items-center">
