--- a/templates/_base.html
+++ b/templates/_base.html
@@ -7,7 +7,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name='icon' href="{% static 'img/ITClogoWhite.png' %}" type='image/x-icon'>
+    <link rel="icon" href="{% static 'img/ITClogoWhite.png' %}" type="image/png">
+    <meta name="description" content="Welcome to the IITB Tech Council. Explore our clubs, tech teams, other bodies, portals, achievements, and hall of fame. Contact us for more information.">
+    <meta name="keywords" content="IITB, Tech Council, Clubs, Tech Teams, Portals, Achievements, Hall of Fame, Contact">
+    <meta name="author" content="IITB Tech Council">
+    <meta property="og:title" content="IITB Tech Council">
+    <meta property="og:description" content="Explore the IITB Tech Council's clubs, tech teams, other bodies, portals, achievements, and hall of fame.">
+    <meta property="og:image" content="{% static 'img/ITClogoWhite.png' %}">
+    <meta property="og:url" content="https://tech-iitb.org">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="IITB Tech Council">
+    <meta name="twitter:description" content="Explore the IITB Tech Council's clubs, tech teams, other bodies, portals, achievements, and hall of fame.">
+    <meta name="twitter:image" content="{% static 'img/ITClogoWhite.png' %}">
     <title>ITC | {% block title %}IITB Tech Council{% endblock %}</title>
 
     <link rel="stylesheet" href="{% static 'src/output.css' %}" />
