--- a/templates/_base.html
+++ b/templates/_base.html
@@ -109,7 +109,7 @@
                     <a href="{% url 'otherbodies_list' %}" class="nav-link">
                         <button type="button"
                             class="px-4 py-2 text-sm font-medium text-white hover-underline-animation">
-                            Other Bodies
+                            Communities
                         </button>
                     </a>
                     <a href="{% url 'portal_list' %}" class="nav-link">
