--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,7 +1,9 @@
 {% extends '_base.html' %}
-{% load static %}
 
-{% block title %}Contact{% endblock %}
+{% block title %}Contact Us{% endblock %}
+{% block description %}Reach out to the IITB Tech Council for inquiries and collaborations{% endblock %}
+{% block og_title %}Contact Us | IITB Tech Council{% endblock %}
+{% block twitter_title %}Contact IITB Tech Council{% endblock %}
 
 {% block content %}
 <div class="flex w-screen xl:w-[90%] h-auto flex-col mt-28 mx-auto items-center">
