--- a/templates/portal_list.html
+++ b/templates/portal_list.html
@@ -1,6 +1,10 @@
 {% extends '_base.html' %}
-
-{% block title %}Portals{% endblock %}
+{% block title %}Portals | IITB Tech Council{% endblock %}
+{% block description %}Explore the portals managed by IITB Tech Council{% endblock %}
+{% block og_title %}Portals | IITB Tech Council{% endblock %}
+{% block og_description %}Check out the portals created and maintained by the IITB Tech Council{% endblock %}
+{% block twitter_title %}Portals | IITB Tech Council{% endblock %}
+{% block twitter_description %}Explore the IITB Tech Council's portals{% endblock %}
 
 {% block content %}
 <div class="flex w-screen xl:w-[90%] h-auto flex-col mt-28 mx-auto items-center">
