--- a/templates/achievements.html
+++ b/templates/achievements.html
@@ -1,5 +1,10 @@
 {% extends '_base.html' %}
-{% block title %}Achievements{% endblock %}
+{% block title %}Achievements | IITB Tech Council{% endblock %}
+{% block description %}Discover the achievements of IITB Tech Council{% endblock %}
+{% block og_title %}Achievements | IITB Tech Council{% endblock %}
+{% block og_description %}Explore the major accomplishments of the IITB Tech Council{% endblock %}
+{% block twitter_title %}Achievements | IITB Tech Council{% endblock %}
+{% block twitter_description %}Learn more about the IITB Tech Council's outstanding achievements{% endblock %}
 
 {% block content %}
 <div class="bg-opacity-10 backdrop-blur-md shadow-lg flex w-screen xl:w-[90%] h-auto flex-col mt-28 mx-auto items-center">
