--- a/templates/body_list.html
+++ b/templates/body_list.html
@@ -1,5 +1,9 @@
-{% extends '_base.html' %} 
-{% block title %}{{ type }}{% endblock %}
+{% extends '_base.html' %}
+{% block title %}{{ type }} | IITB Tech Council{% endblock %}
+{% block description %}Explore {{ type }} managed by IITB Tech Council{% endblock %}
+{% block og_title %}{{ type }} | IITB Tech Council{% endblock %}
+{% block twitter_title %}{{ type }} | IITB Tech Council{% endblock %}
+{% block twitter_description %}Learn more about {{ type }} under IITB Tech Council{% endblock %}
 
 {% block content %}
 <div class="bg-opacity-10 backdrop-blur-md shadow-lg flex w-screen xl:w-[90%] h-auto flex-col mt-28 mx-auto items-center">
