--- a/templates/halloffame.html
+++ b/templates/halloffame.html
@@ -1,6 +1,11 @@
-{% extends '_base.html' %} 
+{% extends '_base.html' %}
 {% load static %}
-{% block title %}Hall of Fame{% endblock %} 
+{% block title %}Hall of Fame | IITB Tech Council{% endblock %}
+{% block description %}Explore the achievements of IITB Tech Council in the Hall of Fame{% endblock %}
+{% block og_title %}Hall of Fame | IITB Tech Council{% endblock %}
+{% block og_description %}Celebrate the outstanding achievements of IITB Tech Council{% endblock %}
+{% block twitter_title %}Hall of Fame | IITB Tech Council{% endblock %}
+{% block twitter_description %}Learn more about the IITB Tech Council's successes{% endblock %}
 
 {% block content %}
 <div class="bg-opacity-10 backdrop-blur-md shadow-lg flex w-[90%] lg:w-[75%] h-auto flex-col mt-28 mx-auto items-center">
@@ -61,7 +66,7 @@
                 </tr>
                 {% endfor %}
               </tbody>
-            </table>
+            </table>  
           </div>
         </div>
       </div>
