--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,13 @@
 {% extends '_base.html' %}
 
-{% block content%}
+{% block title %}IITB Tech Council Home{% endblock %}
+{% block description %}Welcome to the IITB Tech Council, fostering innovation and technical growth{% endblock %}
+{% block og_title %}Home | IITB Tech Council{% endblock %}
+{% block og_description %}Discover how the IITB Tech Council supports student innovation{% endblock %}
+{% block twitter_title %}IITB Tech Council Home{% endblock %}
+{% block twitter_description %}Explore the Institute Technical Council's initiatives{% endblock %}
+
+{% block content %}
 <div class="flex w-full flex-col px-16 sm:px-20 md:px-24 lg:px-28 items-center">
   <!-- Institute Technical Council Section -->
   <div class="flex flex-col justify-center h-full lg:h-screen w-full">
